Tue Aug 27 13:03:33 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/stringio/stringio.c (strio_read_nonblock): declare local
	  variables at the first of function.

Tue Aug 27 11:51:37 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* enumerator.c: Allow Enumerator size argument to be any callable.
	  Patch by Avdi Grimm. [bug #8641] [ruby-core:56032] [fix GH-362]

	* test/ruby/test_enumerator.rb: Test for above

Tue Aug 27 11:46:31 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_profile_clear): do rest_sweep() before clearing
	  profile.current_record.

Tue Aug 27 07:35:05 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* io.c (io_read_nonblock): support non-blocking reads without raising
	  exceptions. As in: `io.read_nonblock(size, exception: false)`
	  [ruby-core:38666] [Feature #5138]
	* ext/openssl/ossl_ssl.c (ossl_ssl_read_internal): ditto
	* ext/stringio/stringio.c (strio_sysread): ditto
	* io.c (rb_io_write_nonblock): support non-blocking writes without
	  raising an exception.
	* ext/openssl/ossl_ssl.c (ossl_ssl_write_internal): ditto
	* test/openssl/test_pair.rb (class OpenSSL): tests
	* test/ruby/test_io.rb (class TestIO): ditto
	* test/socket/test_nonblock.rb (class TestSocketNonblock): ditto
	* test/stringio/test_stringio.rb (class TestStringIO): ditto

Tue Aug 27 05:24:34 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Import RubyGems 2.1.0 Release Candidate
	* test/rubygems:  ditto.

Mon Aug 26 16:24:58 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_nextc): warn carriage return in middle of line.
	  [ruby-core:56240] [Feature #8699]

Mon Aug 26 15:27:39 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/timeout.rb (Timeout#timeout): should not be caught by rescue
	  clause.  [Bug #8730]

Mon Aug 26 14:44:26 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (rb_ary_splice): use RARRAY_PTR_USE() without WB because
	  there are not new relations.

	* enum.c (enum_sort_by): ditto.
